[package]
name = "error-handling"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = { version = "0.6.12", default-features = false }
color-eyre = { version = "0.6.3", default-features = true }
dotenvy = "0.15.7"
tracing = { version = "0.1.40" }
tracing-error = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.dev.package.backtrace]
opt-level = 3